--- a/gi3/src/components/movie/movie.css
+++ b/gi3/src/components/movie/movie.css
@@ -1,33 +1,78 @@
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
+@import url("https://fonts.googleapis.com/css2?family=Lilita+One&display=swap");
+body {
+  color: white;
+  background: linear-gradient(to right, #1a1a1a, #b10d0d);
+  font-family: "Lilita One", sans-serif;
 }
 
-.input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 20px;
-    font-size: 16px;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.container .input {
+  width: 60%;
+  padding: 10px 15px;
+  margin-bottom: 20px;
+  font-size: 16px;
 }
 
 .mySwiper {
-    padding: 20px 0;
+  padding: 20px 0;
 }
 
 .movie-slide {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-
 .movie-slide h3 {
-    margin: 10px 0;
-    font-size: 16px;
+  margin: 10px 0;
+  font-size: 16px;
+}
+.movie-slide img {
+  max-width: 100%;
+  border-radius: 10px;
 }
 
-.movie-slide img {
-    max-width: 100%;
-    border-radius: 10px;
+.swiper-button-prev, .swiper-button-next {
+  color: #b10d0d;
 }
+
+.details-link {
+  margin-top: 10px;
+  padding: 5px 10px;
+  background: linear-gradient(to right, #b10d0d, #1a1a1a);
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+}
+
+.movie-detail {
+  text-align: center;
+  padding: 20px;
+}
+.movie-detail p {
+  margin: 0 auto;
+  max-width: 70vw;
+  line-height: 25px;
+}
+
+.movie-detail img {
+  max-width: 100%;
+  border-radius: 10px;
+  margin-bottom: 20px;
+}
+
+#return-btn {
+  border: none;
+  padding: 10px 15px;
+  border-radius: 15px;
+  background: linear-gradient(to right, #1a1a1a, #b10d0d);
+  color: white;
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.5s;
+}/*# sourceMappingURL=movie.css.map */
